# olloweditor

./: .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  ollow.css  ollow.html  ollow.js  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: javascript-ci.yml  npm-ci.yml  publish-python.yml  python-ci.yml  verify-testpypi.yml
docs/: architecture.md  development.md  release-process.md  repository-structure.md
examples/browser/: basic.html
examples/nextjs/: page.tsx
python/: CHANGELOG.md  IMPLEMENTATION_PLAN.md  MANIFEST.in  README.md  RELEASE_AUDIT_0.1.1.md  TESTPYPI_VERIFICATION.md  pyproject.toml
python/.venv-build/: pyvenv.cfg
python/.venv-release-011/: pyvenv.cfg
python/docs/: release.md
python/examples/: README.md  __init__.py
python/examples/django_example/: README.md
python/examples/django_example/articles/: __init__.py  admin.py  forms.py  models.py  urls.py
python/examples/django_example/articles/migrations/: 0001_initial.py
python/examples/django_example/django_site/: __init__.py  asgi.py  settings.py  urls.py
python/examples/django_example/templates/articles/: detail.html
python/examples/drf_example/: README.md
python/examples/drf_example/articles/: __init__.py  models.py  serializers.py  urls.py  views.py
python/examples/drf_example/articles/migrations/: 0001_initial.py  __init__.py
python/examples/drf_example/drf_site/: __init__.py  settings.py  urls.py  wsgi.py
python/examples/drf_example/templates/articles/: index.html
python/examples/fastapi_example/: README.md  main.py
python/examples/fastapi_example/templates/: detail.html  form.html
python/examples/flask_example/: README.md  app.py
python/examples/flask_example/templates/: form.html
python/scripts/: check_wheel_contents.py  validate_publish_release.py  verify_release.py  verify_testpypi_release.py  verify_wheel_installs.py
python/scripts/testpypi_smoke/: drf.py
python/src/olloweditor/: __init__.py  apps.py  previews.py  resources.py  uploads.py
python/src/olloweditor/integrations/: fastapi.py  flask.py
python/src/olloweditor/integrations/django/: __init__.py  admin.py  checks.py  fields.py  upload_views.py  widgets.py
python/src/olloweditor/integrations/drf/: __init__.py  fields.py  views.py
python/src/olloweditor/static/olloweditor/: .asset-manifest.json  GENERATED.txt  olloweditor-admin.css  olloweditor-init.js  olloweditor.browser.js
python/tests/: conftest.py  empty_urls.py  test_django_admin.py  test_django_admin_preview.py  test_django_checks.py  test_django_field.py  test_django_integration.py  test_django_uploads.py  test_django_widget.py  test_drf_integration.py  test_drf_uploads.py  test_examples.py  test_fastapi_integration.py  test_flask_integration.py  test_package.py  test_previews.py
python/tests/django_testapp/: admin.py  apps.py  storage.py
scripts/: build-browser-bundle.js  sync-python-assets.mjs  verify-python-assets.mjs
src/: index.js
src/core/: ollow-editor.js
src/types/: index.d.ts
tests/browser/: browser-bundle.test.js  initializer.test.js
website/: css.css  documentation.html  index.html  script.js
