[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olloweditor"
version = "0.1.0"
description = "Python packaging foundation for the OllowEditor browser assets and future framework integrations."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "CodeFortify" }
]
keywords = [
  "olloweditor",
  "rich-text-editor",
  "wysiwyg",
  "html-editor",
  "django",
  "djangorestframework",
  "flask",
  "fastapi",
  "cms",
  "publishing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Django",
  "Framework :: Flask"
]

[project.urls]
Homepage = "https://github.com/CodeFortifyCloud/olloweditor"
Documentation = "https://github.com/CodeFortifyCloud/olloweditor#readme"
Repository = "https://github.com/CodeFortifyCloud/olloweditor"
Issues = "https://github.com/CodeFortifyCloud/olloweditor/issues"

[project.optional-dependencies]
django = [
  "Django>=4.2"
]
drf = [
  "Django>=4.2",
  "djangorestframework>=3.15"
]
flask = [
  "Flask>=3.0"
]
fastapi = [
  "fastapi>=0.110",
  "jinja2>=3.1"
]
all = [
  "Django>=4.2",
  "djangorestframework>=3.15",
  "Flask>=3.0",
  "fastapi>=0.110",
  "jinja2>=3.1"
]
dev = [
  "build>=1.2.1",
  "twine>=5.1.1",
  "ruff>=0.5.0"
]
test = [
  "pytest>=8.2"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
olloweditor = [
  "py.typed",
  "static/olloweditor/*",
  "static/olloweditor/**/*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
