[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olloweditor"
version = "0.1.0"
description = "Python integrations and packaged browser assets for using OllowEditor with Django, Django REST Framework, Flask, and FastAPI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "CodeFortify" }
]
keywords = [
  "olloweditor",
  "rich-text-editor",
  "wysiwyg",
  "html-editor",
  "django",
  "djangorestframework",
  "flask",
  "fastapi",
  "cms",
  "publishing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Django",
  "Framework :: Flask",
  "Framework :: FastAPI"
]

[project.urls]
Homepage = "https://github.com/CodeFortifyCloud/olloweditor"
Documentation = "https://github.com/CodeFortifyCloud/olloweditor/tree/main/python"
Repository = "https://github.com/CodeFortifyCloud/olloweditor"
Issues = "https://github.com/CodeFortifyCloud/olloweditor/issues"

[project.optional-dependencies]
django = [
  "Django>=4.2",
  "Pillow>=10.3"
]
drf = [
  "Django>=4.2",
  "djangorestframework>=3.15",
  "Pillow>=10.3"
]
flask = [
  "Flask>=3.0",
  "Pillow>=10.3"
]
fastapi = [
  "fastapi>=0.110",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "Pillow>=10.3"
]
all = [
  "Django>=4.2",
  "djangorestframework>=3.15",
  "Flask>=3.0",
  "fastapi>=0.110",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "Pillow>=10.3"
]
dev = [
  "build>=1.2.1",
  "mypy>=1.10",
  "twine>=5.1.1",
  "ruff>=0.5.0"
]
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "Django>=4.2",
  "djangorestframework>=3.15",
  "Flask>=3.0",
  "fastapi>=0.110",
  "jinja2>=3.1",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "Pillow>=10.3"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
olloweditor = [
  "py.typed",
  "static/olloweditor/*",
  "static/olloweditor/**/*",
  "static/olloweditor/.asset-manifest.json"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=olloweditor --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["olloweditor"]

[tool.coverage.report]
fail_under = 85
show_missing = true
omit = [
  "src/olloweditor/apps.py",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S603", "S607"]
"examples/**/*.py" = ["S105", "S106", "S108", "S201"]
"scripts/*.py" = ["S603", "S607"]
"scripts/testpypi_smoke/*.py" = ["S106"]
"src/olloweditor/integrations/flask.py" = ["S704"]
"src/olloweditor/integrations/fastapi.py" = ["S704"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
